Fixes invisible text in .caption-row from font-color #f5f5f5!important on white background

--- a/src/main/resources/hudson/security/table.css
+++ b/src/main/resources/hudson/security/table.css
@@ -40,6 +40,9 @@
   font-weight: lighter;
   writing-mode: tb-rl; /* works in IE, not FF */
   padding: 0;
+  background-color: #eee;
+  border: 1px solid #D3D7CF;
+  color: #3b3b3b!important;
 }
 
 .global-matrix-authorization-strategy-table TD {
